--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.460.0",
     "next": "^14.2.18",
     "next-intl": "^3.25.1",
+    "next-seo": "^6.6.0",
     "next-themes": "^0.4.3",
     "photoswipe": "^5.4.4",
     "react": "^18.3.1",
